<resources>
    <string name="app_name">Magharib</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="Guest">Guest</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="traveler">Traveler</string>
    <string name="host">Host</string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="agree">Agree</string>
    <string name="Skip"><u>Skip</u></string>
    <string name="skip_for_now"><u>Skip For now</u></string>
    <string name="city_taste">What City Suits Your Taste?</string>
    <string name="take_the_questionnare">Take the questionnare !</string>
    <string name="questionnaire">Questionnaire :</string>
    <string name="what_do_you_prefer">What do you prefer ?</string>
    <string name="thank_you_your_time">Thank you for your Time</string>
    <string name="start_your_journey">Start your Journey!</string>
    <string name="reviews_ratings"><![CDATA[Reviews & Ratings :]]></string>
    <string name="date">Date :</string>
    <string name="rating">Rating :</string>
    <string name="history">History :</string>
    <string name="place">Place :</string>
    <string name="reservation">Reservation</string>
    <string name="select_your_destination">Select Your Destination :</string>
    <string name="restaurants_cafes">Restaurants/Cafes</string>
    <string name="activities">Activities</string>
    <string name="select_your_experience">Select Your Experience :</string>
    <string name="accommodations">Accommodations</string>
    <string name="contact_info">Contact Info :</string>
    <string name="phone">Phone :</string>
    <string name="email2">Email :</string>
    <string name="book">Book</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="confirm"><u>Confirm</u></string>
    <string name="booking_details">Booking Details:</string>
    <string name="txt_booking_details">Your booking is pending confirmation and has been sent to the host , you will be notified of their approval or denial.</string>
    <string name="txt_booking_confirmed1">Congratulations !</string>
    <string name="txt_booking_confirmed">Your booking is confirmed</string>
    <string name="booking_requests">Booking Requests</string>
    <string name="experiences">Experiences :</string>
    <string name="booking_request">Booking Request :</string>
    <string name="activity_surfing"><u>Activity Surfing</u></string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="txt_approve_booking">Your Booking Has Been Approve</string>
    <string name="txt_deny_booking">Your Booking Has Been Denied</string>
    <string name="create_an_experience">Create an experience</string>
    <string name="create_an_experience2">Create an experience :</string>
    <string name="experience_details">Experience Details :</string>
    <string name="upload"><u>Upload</u></string>
    <string name="name">Name :</string>
    <string name="choose_the_location">Choose The Location :</string>
    <string name="price">Price :</string>
    <string name="contact_details">Contact Details :</string>
    <string name="phone2">Phone</string>
    <string name="submit">Submit</string>
    <string name="details">Details :</string>
    <string name="account_approval">Account Approval</string>
    <string name="txt_account_approval">"Kindly wait for our team to approve your registration "</string>
    <string name="thank_you">Thank you !</string>
    <string name="view_experience">View Experience :</string>
    <string name="location">Location :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="txt_dialog_delete">Are you sure you want to delete it ?</string>
    <string name="cancel2">Cancel</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="txt_dialog_report">Are you sure you want to report this user ?</string>
    <string name="Reports">Reports :</string>
    <string name="view">View</string>
    <string name="host_experience_requests">Experience Requests :</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="disable_user">Disable User</string>
    <string name="txt_delete_comment">The comment has been deleted</string>
    <string name="txt_disable_user">The account has been disabled</string>
    <string name="reports">Reports</string>
    <string name="host_experience_requests2"><![CDATA[Host & Experience Requests]]></string>
    <string name="txt_approve_user">The request has been approved</string>
    <string name="txt_deny_user">The request has been denied</string>
    <string name="host_traveler_requests"><![CDATA[Host & Traveler Requests :]]></string>
    <string name="choose_the_date">Choose The Date</string>
    <string name="booking_requests_empty">Booking requests are empty</string>
    <string name="Reports_empty">Reports Are Empty</string>
    <string name="experience_requests_are_empty">Experience Requests Are Empty</string>
    <string name="host_traveler_requests_are_empty"><![CDATA[Host & Traveler Requests are empty]]></string>
    <string name="experience_are_empty">Experience Are Empty</string>
    <string name="history_is_empty">History is Empty</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="txt_forgot_password2">If you need help resetting your password, we can help by sending a message to reset it</string>
    <string name="send">Send</string>
    <string name="rating2">Rating</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="reviews_ratings_are_empty"><![CDATA[Reviews & Ratings are empty]]></string>
</resources>