<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WayToSignActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/orange"
        android:textSize="36sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp60"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp60"
        android:background="@drawable/shape_btn"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp60"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp60"
        android:background="@drawable/shape_btn"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp60"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp60"
        android:background="@drawable/shape_btn"
        android:text="@string/Guest"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20" />


</LinearLayout>