<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp50"
                android:text="@string/sign_up"
                android:textColor="@color/orange"
                android:textSize="36sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp50"
                android:layout_marginEnd="@dimen/dp60"
                android:background="@drawable/shape_edit"
                android:gravity="center"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/sp17" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp60"
                android:background="@drawable/shape_edit"
                android:gravity="center"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/sp17" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp60"
                android:background="@drawable/shape_edit"
                android:gravity="center"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/sp17" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp60"
                android:background="@drawable/shape_edit"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/sp17" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp60"
                android:background="@drawable/shape_edit"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/sp17" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp60"
                android:background="@drawable/shape_edit"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/sp17" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/dp60"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_host"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/host"
                    android:textColor="#6c7075"
                    android:textSize="@dimen/sp14" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_traveler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/traveler"
                    android:textColor="#6c7075"
                    android:textSize="@dimen/sp14" />


            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp10"
                android:padding="10dp"
                android:text="@string/terms_and_conditions"
                android:textColor="#457ab1"
                android:textSize="@dimen/sp18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp60"
                android:layout_marginBottom="@dimen/dp50"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_agree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/agree"
                    android:textColor="#6c7075"
                    android:textSize="@dimen/sp14" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sign_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>