<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/forgot_password2"
                android:textColor="@color/orange"
                android:textSize="36sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:gravity="center"
                android:text="@string/txt_forgot_password2"
                android:textColor="@color/orange"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/eb_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp50"
                android:layout_marginEnd="@dimen/dp60"
                android:background="@drawable/shape_edit"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/sp17" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp60"
                android:layout_marginTop="@dimen/dp50"
                android:layout_marginEnd="@dimen/dp60"
                android:layout_marginBottom="@dimen/dp50"
                android:background="@drawable/shape_btn"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp20" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>