<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffbd1"
    android:orientation="vertical"
    tools:context=".Traveler.BookingDetailsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_back" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:text="@string/booking_details"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp22" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/dp140"
        android:layout_height="@dimen/dp90"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp40"
        android:src="@drawable/image_booking_details" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:gravity="center"
        android:text="@string/txt_booking_details"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp22" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/dp50"
        android:background="#fffbd1"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp10"
        android:paddingBottom="@dimen/dp24">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp20"
            android:background="#a6a6a6" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/contact_info"
            android:textColor="@color/orange"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phone"
                android:textColor="@color/orange"
                android:textSize="@dimen/sp20"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp10"
                android:text="0555071601"
                android:textColor="#2b59a2"
                android:textSize="@dimen/sp18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/email2"
                android:textColor="@color/orange"
                android:textSize="@dimen/sp20"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp10"
                android:text="valleyresort@gmail.com"
                android:textColor="#2b59a2"
                android:textSize="@dimen/sp18" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>